fixed team spacing on mobile, changed button animation

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,18 @@ body {
   color: white;
 }
 
+.simpleBtn {
+  color: white;
+  border: 3px solid white;
+  transition: 0.4s;
+  background: none;
+}
+
+.simpleBtn:hover {
+  color: black;
+  background-color: white;
+}
+
 
 
 /* Hamburger Menu */
@@ -114,28 +126,28 @@ body {
 }
 
 .wave#wave1{
-  z-index: 1000;
+  z-index: 500;
   opacity: 1;
   bottom: 0;
   animation: animateWave 12s linear infinite;
 }
 
  .wave#wave2{
-  z-index: 999;
+  z-index: 499;
   opacity: 0.5;
   bottom: 10px;
   animation: animateWave_02 12s linear infinite;
 }
 
  .wave#wave3{
-  z-index: 1000;
+  z-index: 500;
   opacity: 0.2;
   bottom: 15px;
   animation: animateWave 9s linear infinite;
 }
 
  .wave#wave4{
-  z-index: 999;
+  z-index: 499;
   opacity: 0.7;
   bottom: 20px;
   animation: animateWave_02 9s linear infinite;
@@ -167,14 +179,14 @@ body {
 .teamDiv {
   background-color: rgb(59 130 246 / 0.5);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
   grid-gap: 20px;
 }
 
 /* TEAM SECTION CSSS */
 .card {
-    background-color: aquamarine;
-    padding: 5rem 0 0;
+    background-color: rgb(245, 245, 245);
+    padding: 2rem 0 0;
     max-width: 35ch;
     border-radius: 0.5rem;
     overflow: hidden;
@@ -370,4 +382,22 @@ body {
       border-width: 8px 16px 8px 0;
       border-color: transparent #F45B69 transparent transparent;
     }
+  }
+
+
+  .img-container {
+    position: relative;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    margin: 0 auto;
+    margin-bottom: 1.5rem;
+  }
+  .person-img {
+    width: 100%;
+    display: block;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    position: relative;
   }
